css/game-pension-style.css
/* ... */
.if6_opener .ty1 h1 {
    font-size: 16px;
    line-height: normal;
    font-weight: bold;
} */

/* SLIDERS */

.ui-handle-text {
  position: absolute;
  width: 100%;
  text-align: center;
  top: -30px;
  color: red;
  white-space: nowrap;
  font-size: 17px;
}

.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br {
  border-radius: 0;
}

/* pension-result-slider -> pension-simple-slider */

.pension-simple-slider {
  margin: 50px 0;
}

.pension-simple-slider .ui-slider-handle {
  width: 30px;
  height: 30px;
  top: -13.5px;
  border-radius: 50%;
  background: white;
  cursor: pointer;
  margin-left: -15px;
}

.ui-widget {
  font-family: SparkasseRg;
}

.pension-simple-slider .ui-slider-handle:focus,
.pension-slider .ui-slider-handle:focus {
  outline: none;
}

.pension-simple-slider.ui-widget-content {
  border: none;
  background: #F0F0F0;
}

.pension-simple-slider.ui-slider-horizontal {
  height: 5px;
}

.pension-simple-slider .ui-slider-range-min {
  background: red;
}

.pension-simple-slider .min,
.pension-simple-slider .max {
  font-family: SparkasseRg;
  font-size: 14px;
  color: #666666;
  position: absolute;
  top: 17px;
}

.pension-simple-slider .max {
  right: 0;
}

.pension-simple-slider .value {
  color: red;
  font-size: 17px;
  position: absolute;
  right: 0;
  top: -40px;
}



@media screen and (max-width: 839px) {
  .pension-simple-slider .ui-slider-handle {
    width: 40px;
    height: 40px;
    margin-left: -20px;
    top: -19px;
    background: white;
  }

  .pension-simple-slider .min,
  .pension-simple-slider .max {
    top: 23px;
  }
}

/* pension-slider->pension-question-slider */

.pension-question-slider.ui-widget-content {
  background: white;
  border: none;
  background-color: red;
  display: inline-block;
  outline: none;
  width: 100%;
}

.pension-question-slider.ui-slider-horizontal {
  height: 12px;
}

.pension-question-slider .ui-widget-header {
  background: red;
}

.pension-question-slider .ui-slider-handle {
  background: red;
  width: 80px;
  height: 80px;
  border-radius: 50%;
  border: none;
  margin-left: -40px;
  margin-top: -37px;
  top: 0;
  left: 0;
  -webkit-transition: all 1s;
  -moz-transition: all 1s;
  -ms-transition: all 1s;
  -o-transition: all 1s;
  transition: all 1s;
  cursor: pointer;
}

@media screen and (max-width: 600px) {
  .pension-question-slider.ui-slider-horizontal {
    height: 8px;
  }

  .pension-question-slider .ui-slider-handle {
    width: 40px;
    height: 40px;
    margin-left: -20px;
    margin-top: -17px;
  }

  .pension-simple-slider .min,
  .pension-simple-slider .max {
    top: 20px;
  }
}

/* slider icons */

.slider-icon-leben .ui-slider-handle {
  background-color: red !important;
  background-image: url("../img/icons/icon-leben.png") !important;
}

.slider-icon-reisen .ui-slider-handle {
  background-color: red !important;
  background-image: url("../img/icons/icon-reisen.png") !important;
}

.slider-icon-freizeit .ui-slider-handle {
  background-color: red !important;
  background-image: url("../img/icons/icon-freizeit.png") !important;
}

.slider-icon-wohnen .ui-slider-handle {
  background-color: red !important;
  background-image: url("../img/icons/icon-wohnen.png") !important;
}

.slider-icon-herzen .ui-slider-handle {
  background-color: red !important;
  background-image: url("../img/icons/icon-herzen.png") !important;
}

.slider-icon-leben .ui-slider-handle,
.slider-icon-reisen .ui-slider-handle,
.slider-icon-wohnen .ui-slider-handle,
.slider-icon-herzen .ui-slider-handle,
.slider-icon-freizeit .ui-slider-handle {
  background-repeat: no-repeat !important;
  background-position: center !important;
  background-size: 50% auto !important;
}


/* USER AGE CARD */

#QuestionAge {
  clear: both;
}

#QuestionAge th {
  white-space: nowrap;
  color: #777777;
}

.user-age-table td.user-age-slider-cell {
  padding-left: 60px;
  padding-right: 60px;
  width: 100%;
}

@media screen and (max-width: 600px) {
  #QuestionAge th {
    font-size: 15px;
  }
}

@media screen and (max-width: 649px) {
  .user-age-table td.user-age-slider-cell {
    width: auto;
    padding-left: 10px;
    padding-right: 10px;
  }
}

#SliderUserAge {
  position: relative;
}

#SliderUserAge .min:after,
#SliderUserAge .max:after,
#SliderUserAge .value:after {
  content: " Jahre";
}

#SliderUserAge .ui-handle-text {
  left: -16px;
}

/* QUESTION CARD */

.pagination-centered {
  margin-top: 10px;
}

#QuestionNumbers {
  text-align: center;
  margin-bottom: 30px;
  height: 46px;
}

#QuestionNumbers span {
  background-color: gray;
  border-radius: 50%;
  color: white;
  display: inline-block;
  font-size: 18px;
  line-height: 36px;
  width: 36px;
  height: 36px;
  text-align: center;
  position: relative;
  margin-right: 40px;
  padding: auto 0;
  -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
    -ms-transition: all 0.4s;
     -o-transition: all 0.4s;
      transition: all 0.4s;
}

#QuestionNumbers span:after {
  content: "";
  display: block;
  width: 50px;
  height: 3px;
  background-color: gray;
  position: absolute;
  left: 35px;
  top: 18px;
  
  -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
    -ms-transition: all 0.4s;
     -o-transition: all 0.4s;
      transition: all 0.4s;
}

#QuestionNumbers span:last-child:after {
  display: none;
}

#QuestionNumbers span:last-child {
  margin-right: 0;
}

#QuestionNumbers .current-question {
  width: 46px;
  height: 46px;
  line-height: 46px;
  /* top: -5px; */
}

#QuestionNumbers .current-question:after {
  left: 45px !important;
  top: 23px !important;
}

#QuestionNumbers .red,
#QuestionNumbers .red:after {
  background-color: red !important;
}
/* ... */

